--- a/documents/urban_simulation_report.html
+++ b/documents/urban_simulation_report.html
@@ -98,9 +98,9 @@ div.csl-indent {
 <h4 class="anchored" data-anchor-id="centrality-measures">Centrality Measures</h4>
 <p>Centrality measures are characteristics of nodes showing their <em>importance</em> in various aspects. In this section, we will identify nodes on the network with the highest centrality in the following measurements: degree centrality, closeness centrality, and betweenness centrality. The 3 central measures that I will cover in this report are: degree centrality, betweenness centrality, and closeness centrality. We will consider a network of <span class="math inline">\(n\)</span> nodes, and the number of links between nodes <span class="math inline">\(i\)</span> and <span class="math inline">\(j\)</span> will be denoted as <span class="math inline">\(A_{ij}\)</span>.</p>
 <p><strong>Degree centrality</strong> is the number of links that are connected to each node. Considering the underground as an undirected graph, the degree centrality <span class="math inline">\(k_i\)</span> for node <span class="math inline">\(i\)</span> is calculated as</p>
-<p><span class="math display">\[
+<p><span id="eq-degree-centrality"><span class="math display">\[
 k_i = \sum_{j} A_{ij}
-\]</span></p>
+\tag{1}\]</span></span></p>
 <p>In the context of the underground network, the degree corresponds to the number of lines that serve each station counting 1 for each direction. A high degree centrality indicates there are many lines that serve the station, thus identifies importance of the station as a transit hub that allows for transfer between multiple lines.</p>
 <p>The stations with the highest degree centrality are shown in <a href="#tbl-degree">Table&nbsp;1</a>. These stations match the characteristics of being a large transfer station.</p>
 <div id="tbl-degree" class="anchored">
@@ -173,9 +173,9 @@ k_i = \sum_{j} A_{ij}
 </table>
 </div>
 <p><strong>Betweenness centrality</strong> is defined by the number of shortest paths that run through the node (or link). The betweenness centrality <span class="math inline">\(x_i\)</span> can be calculated as</p>
-<p><span class="math display">\[
+<p><span id="eq-betweenness-centrality"><span class="math display">\[
 x_i = \sum_{st} \frac{n^i_{st}}{g_{st}}
-\]</span></p>
+\tag{2}\]</span></span></p>
 <p>where</p>
 <p><span class="math display">\[
 n^i_{st} =
@@ -251,9 +251,9 @@ n^i_{st} =
 </table>
 </div>
 <p><strong>Closeness centrality</strong> is the inverse of the main geodesic distance <span class="math inline">\(l_i\)</span> of one node to all the other <span class="math inline">\(n-1\)</span> nodes. Given the geodesic distance between nodes <span class="math inline">\(i\)</span> and <span class="math inline">\(j\)</span> as <span class="math inline">\(d_{ij}\)</span>, the closeness centrality <span class="math inline">\(C_i\)</span> is calculated as</p>
-<p><span class="math display">\[
+<p><span id="eq-closeness-centrality"><span class="math display">\[
 C_i = \frac{1}{l_i} = \frac{n-1}{\sum_{j} d_{ij}}
-\]</span></p>
+\tag{3}\]</span></span></p>
 <p>A high closeness centrality in a rail network indicates the station is within a short distance from all the other stations, located at the physical centre of the network. Provided that the network spreads out radially from the city centre, the stations with highest closeness centrality are assumed to be located within the city centre, as illustrated by the high-ranked stations in London shown in <a href="#tbl-closeness">Table&nbsp;3</a>. These stations are located at the West End area - which can be assumed as the central area of London.</p>
 <div id="tbl-closeness" class="anchored">
 <table class="table">
@@ -551,11 +551,37 @@ C^{\Delta}_i = \frac{\Delta P}{P} = \frac{P(G) - P(G')}{P(G)}
 </section>
 <section id="flows-weighted-network" class="level3">
 <h3 class="anchored" data-anchor-id="flows-weighted-network">Flows: Weighted Network</h3>
+<p>In this section, a weighted network with the flows assigned to the links between stations will be considered. Based on the Transport for London OD data <span class="citation" data-cites="transportforlondon2021">(<a href="#ref-transportforlondon2021" role="doc-biblioref">Transport for London, 2021</a>)</span>, the morning peak flows have been assigned assuming that all flows use the shortest path, considering the length of each edge. Hereinafter, <span class="math inline">\(w_{ij}\)</span> is the flow on the link between adjacent stations <span class="math inline">\(i\)</span> and <span class="math inline">\(j\)</span> (sum of both directions).</p>
 <section id="centrality-measures-1" class="level4">
 <h4 class="anchored" data-anchor-id="centrality-measures-1">Centrality Measures</h4>
+<p>We will consider whether the 3 centrality measures we have identified in the previous section need adjustments to be applied in the context of the weighted network.</p>
+<p>The degree centrality as the number of connected stations continues to be a valid figure. Theoretically, a flow-weighted version of degree centrality <a href="#eq-degree-centrality">Equation&nbsp;1</a> can be defined as</p>
+<p><span id="eq-deg-weighted"><span class="math display">\[
+s_i = \sum_j A_{ij}w_{ij}
+\tag{4}\]</span></span></p>
+<p>which is a measure defined as the strength <span class="math inline">\(s_i\)</span> <span class="citation" data-cites="lee2008">(<a href="#ref-lee2008" role="doc-biblioref">Lee <em>et al.</em>, 2008</a>)</span>. This quantifies the amount of flow that passes through each node - which is highly related to the betweenness centrality in the weighted context.</p>
+<p>The betweenness centrality considering flows, given <span class="math inline">\(T_{ij}\)</span> as the number of flows from node <span class="math inline">\(i\)</span> to <span class="math inline">\(j\)</span>, can be proposed as follows:</p>
+<p><span id="eq-bet-weighted"><span class="math display">\[
+x'_i = \sum_{st} \frac{n^i_{st}}{g_{st}}T_{st}
+\tag{5}\]</span></span></p>
+<p>Recalling the strength <a href="#eq-deg-weighted">Equation&nbsp;4</a> was the sum of all flows using the links that connect to the node, and <a href="#eq-bet-weighted">Equation&nbsp;5</a> only considers the flows that passes through (not beginning nor terminating), these two centrality measures fulfill the following relationship</p>
+<p><span class="math display">\[
+s_i = x'_i + O_i + D_i
+\]</span></p>
+<p>where <span class="math inline">\(O_i, D_i\)</span> is the number of flows originating and terminating at node <span class="math inline">\(i\)</span>, respectively.</p>
+<p>When considering the closeness centrality with regards to the number of flows, simply considering <span class="math inline">\(T_{ij}\)</span> in <a href="#eq-closeness-centrality">Equation&nbsp;3</a> as <span class="math inline">\(C'_i = \frac{\sum_j T_{ij}}{\sum_j T_{ij}d_{ij}}\)</span> will return the average distance travelled by the user of the station, which does not correspond to the principle of closeness centrality. (This figure may be larger in the city centre where people are willing to travel from far away, or at the periphery of the network where passengers need to travel long distances in general.) Instead, by defining the social distance of links as the inverse of the flows, and <span class="math inline">\(u_{ij}\)</span> as the shortest social distance between nodes <span class="math inline">\(i\)</span> and <span class="math inline">\(j\)</span>, the closeness centrality considering weights can be defined as</p>
+<p><span class="math display">\[
+C''_i = \frac{n-1}{\sum_j u_{ij}}
+\]</span></p>
 </section>
 <section id="impact-measures-1" class="level4">
 <h4 class="anchored" data-anchor-id="impact-measures-1">Impact Measures</h4>
+<p>We will consider the need for adjusting the impact measures in <a href="#tbl-delta-performance">Table&nbsp;4</a> when considering the passenger flows.</p>
+<p>The size of the largest connected components is a valid measure in a weighted network, since it does not consider the flows between nodes. If the weight of the edges are to be incorporated to quantify the <em>connected-ness</em> of the nodes, a similar performance measure would be the maximum number of journeys that can be completed within a connected component.</p>
+<p>For the network efficiency, each of the distances should be weighted according to the number of passengers who travel between the two nodes. The efficiency should also account for the flows between points. The equation in <a href="#tbl-delta-performance">Table&nbsp;4</a> should be adjusted using <span class="math inline">\(T_{ij}\)</span> as:</p>
+<p><span class="math display">\[
+E(G) = \frac{1}{n(n-1)} \sum_{i \ne j} \frac{T_{ij}}{d_{ij}}
+\]</span></p>
 </section>
 <section id="node-removal-1" class="level4">
 <h4 class="anchored" data-anchor-id="node-removal-1">Node Removal</h4>
@@ -588,7 +614,7 @@ K = \frac{T}{\sum_i \sum_j O^{\alpha}_i D^{\gamma}_j f(d_{ij})}
 <p>The <strong>singly constrained model</strong> constrains the total number of observations for each component at the origin or the destination. The origin constrained model fixes the total number of journeys at the origin, as:</p>
 <p><span id="eq-orig"><span class="math display">\[
 T_{ij} = A_i O^{\alpha}_i D^{\gamma}_j f(d_{ij})
-\tag{1}\]</span></span></p>
+\tag{6}\]</span></span></p>
 <p>The parameter <span class="math inline">\(A_i\)</span> is determined so that the total at the origin is constrained, that is:</p>
 <p><span class="math display">\[
 \sum_j T_{ij} = O_i \therefore A_i = \frac{1}{\sum_j D_j f(d_{ij})}
@@ -601,7 +627,7 @@ T_{ij} = O^{\alpha}_i B_j D^{\gamma}_j f(c_{ij}) \quad
 <p>The <strong>doubly constrained model</strong> constrains both the total at the origin and destination.</p>
 <p><span id="eq-dbl"><span class="math display">\[
 T_{ij} = A_i O^{\alpha}_i B_j D^{\gamma}_j \exp(-\beta d_{ij})
-\tag{2}\]</span></span></p>
+\tag{7}\]</span></span></p>
 </section>
 <section id="calibration-of-cost-function" class="level4">
 <h4 class="anchored" data-anchor-id="calibration-of-cost-function">Calibration of Cost Function</h4>
@@ -613,7 +639,7 @@ T_{ij} = A_i O^{\alpha}_i B_j D^{\gamma}_j \exp(-\beta d_{ij})
 <li>flow from the origin to the destination</li>
 </ul>
 <p>Using this dataset, we will use the doubly constrained model to estimate the best cost function and parameters by comparing with the observed flow. Constraining both the total journeys for both the origin and destination will enable the full utilisation of observed data, enabling a most accurate calibration of the cost function.</p>
-<p>The doubly constrained model after a logarithm transformation of <a href="#eq-dbl">Equation&nbsp;2</a> into a Poisson expression can be written as:</p>
+<p>The doubly constrained model after a logarithm transformation of <a href="#eq-dbl">Equation&nbsp;7</a> into a Poisson expression can be written as:</p>
 <p><span class="math display">\[
 \ln(T_{ij}) = \ln A_i + \ln O^{\alpha}_i + \ln B_j + \ln D^{\gamma}_j + \ln f(d_{ij}) \\
 \]</span></p>
@@ -656,7 +682,7 @@ d^{-\beta}_{ij}  \text{ (Inverse Power)}
 <p>From these results, the negative exponential model for the cost function has a better fit to the observed flows. When considering the scenarios, the cost function</p>
 <p><span id="eq-beta"><span class="math display">\[
 f(d_{ij}) = \exp(-\beta d_{ij}) \quad (\beta = -1.543 \times 10^{-4})
-\tag{3}\]</span></span></p>
+\tag{8}\]</span></span></p>
 <p>will be used.</p>
 </section>
 </section>
@@ -691,16 +717,16 @@ f(d_{ij}) = \exp(-\beta d_{ij}) \quad (\beta = -1.543 \times 10^{-4})
 <p>Since scenario A involves the change in the characteristics of the destination, the origin constrained model is used for the analysis to preserve the number of commuters starting their journeys in each area.</p>
 <section id="calibration-of-gamma" class="level4">
 <h4 class="anchored" data-anchor-id="calibration-of-gamma">Calibration of <span class="math inline">\(\gamma\)</span></h4>
-<p>Since the origin-constrained model will be used for the analysis of the scenarios, the gamma variable introduced in <a href="#eq-orig">Equation&nbsp;1</a> must be calibrated before applying to the new scenarios. <span class="math inline">\(\gamma\)</span> with the highest R-squared value for estimating the original flow will be used, resulting as follows:</p>
+<p>Since the origin-constrained model will be used for the analysis of the scenarios, the gamma variable introduced in <a href="#eq-orig">Equation&nbsp;6</a> must be calibrated before applying to the new scenarios. <span class="math inline">\(\gamma\)</span> with the highest R-squared value for estimating the original flow will be used, resulting as follows:</p>
 <p><span id="eq-gamma"><span class="math display">\[
 \gamma = 7.556 \times 10^{-1} \quad (R^2 = 0.4680)
-\tag{4}\]</span></span></p>
+\tag{9}\]</span></span></p>
 </section>
 <section id="scenario-a" class="level4">
 <h4 class="anchored" data-anchor-id="scenario-a">Scenario A</h4>
 <p>We will first decrease the number of jobs at Canary Wharf by 50%, from the original 58,772 to 29,386. Using the origin-constrained model, the procedure is as follows:</p>
 <ol type="1">
-<li>Calculate the flow based on the origin-constrained model <span class="math inline">\(T_{ij} = A_i O_i D^{\gamma}_j \exp(-\beta d_{ij})\)</span> to retrieve the optimal <span class="math inline">\(\gamma\)</span> value for this dataset. The value for parameters <span class="math inline">\(\beta, \gamma\)</span> is derived from <a href="#eq-beta">Equation&nbsp;3</a> and <a href="#eq-gamma">Equation&nbsp;4</a>.</li>
+<li>Calculate the flow based on the origin-constrained model <span class="math inline">\(T_{ij} = A_i O_i D^{\gamma}_j \exp(-\beta d_{ij})\)</span> to retrieve the optimal <span class="math inline">\(\gamma\)</span> value for this dataset. The value for parameters <span class="math inline">\(\beta, \gamma\)</span> is derived from <a href="#eq-beta">Equation&nbsp;8</a> and <a href="#eq-gamma">Equation&nbsp;9</a>.</li>
 <li>Reduce the number of jobs at Canary Wharf (transform <span class="math inline">\(D_j\)</span> into <span class="math inline">\(D'_j\)</span>)</li>
 <li>Recalibrate the adjusted <span class="math inline">\(A'_i\)</span> parameter with the new distribution of using the relationship <span class="math inline">\(A'_i = \frac{1}{\sum_j D'^{\gamma}_j f(d_{ij})}\)</span></li>
 <li>Calculate the new flows using the relationship <span class="math inline">\(T'_{ij} = A'_i O_i D'^{\gamma}_j \exp(-\beta d_{ij})\)</span></li>
@@ -716,14 +742,14 @@ f(d_{ij}) = \exp(-\beta d_{ij}) \quad (\beta = -1.543 \times 10^{-4})
 </section>
 <section id="scenario-b" class="level4">
 <h4 class="anchored" data-anchor-id="scenario-b">Scenario B</h4>
-<p>We will consider 2 scenarios for the change in the cost of transport. Given the original parameter as <span class="math inline">\(\beta\)</span>, the parameters <span class="math inline">\(\beta_1, \beta_2\)</span> for the two scenarios B1 and B2 will be modified as shown in <a href="#eq-paramsB">Equation&nbsp;5</a> and <a href="#fig-paramsB">Figure&nbsp;4</a>.</p>
+<p>We will consider 2 scenarios for the change in the cost of transport. Given the original parameter as <span class="math inline">\(\beta\)</span>, the parameters <span class="math inline">\(\beta_1, \beta_2\)</span> for the two scenarios B1 and B2 will be modified as shown in <a href="#eq-paramsB">Equation&nbsp;10</a> and <a href="#fig-paramsB">Figure&nbsp;4</a>.</p>
 <p><span id="eq-paramsB"><span class="math display">\[
 \begin{cases}
 \beta_1 = 2 \beta \\
 \beta_2 = 10 \beta
 \end{cases}
 \quad (\beta = -1.543 \times 10^{-4})
-\tag{5}\]</span></span></p>
+\tag{10}\]</span></span></p>
 <div id="fig-paramsB" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="img/dist_decay.png" class="img-fluid figure-img"></p>
@@ -821,8 +847,14 @@ Latora, V. and Marchiori, M. (2001) <span>“Efficient <span>Behavior</span> of 
 <div id="ref-latora2007" class="csl-entry" role="listitem">
 Latora, V. and Marchiori, M. (2007) <span>“A measure of centrality based on network efficiency,”</span> <em>New Journal of Physics</em>, 9(6), p. 188. doi: <a href="https://doi.org/10.1088/1367-2630/9/6/188">10.1088/1367-2630/9/6/188</a>.
 </div>
+<div id="ref-lee2008" class="csl-entry" role="listitem">
+Lee, K. <em>et al.</em> (2008) <span>“Statistical analysis of the <span>Metropolitan Seoul Subway System</span>: <span>Network</span> structure and passenger flows,”</span> <em>Physica A: Statistical Mechanics and its Applications</em>, 387(24), pp. 6231–6234. doi: <a href="https://doi.org/10.1016/j.physa.2008.06.035">10.1016/j.physa.2008.06.035</a>.
+</div>
 <div id="ref-paaswell2012" class="csl-entry" role="listitem">
 Paaswell, R. E. (2012) <span>“Approaches to <span>Infrastructure Redevelopment</span>, <span>WTC</span>, <span>Lower NYC</span> and the <span>Region</span>,”</span> pp. 215–226. doi: <a href="https://doi.org/10.1061/40717(148)18">10.1061/40717(148)18</a>.
+</div>
+<div id="ref-transportforlondon2021" class="csl-entry" role="listitem">
+Transport for London (2021) <span>“Project <span>NUMBAT</span>.”</span>
 </div>
 <div id="ref-wyatt2002" class="csl-entry" role="listitem">
 Wyatt, E. (2002) <span>“Subway <span>Service</span> to <span>Resume On Routes Closed After</span> 9/11,”</span> <em>The New York Times</em>.
